[package]
name = "struct-path-tests"
version = "0.1.2"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "Tests for macros implementation"
homepage = "https://github.com/abdolence/struct-path-rs"
repository = "https://github.com/abdolence/struct-path-rs"
documentation = "https://github.com/abdolence/struct-path-rs"
publish = false

[dependencies]
struct-path = { version = "^0.2.1-alpha.0", path = "../macro"}

